--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <h1>Ciente Inteligência Esportiva</h1>
   <div class="link-container">
     <a href="saltopronto.html">Medidor de Saltos</a>
-    <a href="ColetaIntegrado.html">Coleta Integrada</a>
+    <a href="ColetaIntegrado.html">Monitoramento Integrado</a>
     <a href="bigfivetestintegrado.html">Teste de Personalidade Big Five</a>
     <a href="cogteste.html">Testes Cognitivos</a>
   </div>
