--- a/saltopronto.html
+++ b/saltopronto.html
@@ -20,8 +20,8 @@
 <body>
   <div class="container">
     <h1>Medidor de Saltos</h1>
-    <button onclick="iniciarTeste(1)">Força Explosiva<br><span style="font-size:1rem;font-weight:400;">(1 Salto)</span></button>
-    <button onclick="iniciarTeste(10)">Resistência de Força<br><span style="font-size:1rem;font-weight:400;">(10 Saltos)</span></button>
+    <button onclick="tipoTeste=1; iniciarTeste(tipoTeste);">Força Explosiva<br><span style="font-size:1rem;font-weight:400;">(1 Salto)</span></button>
+    <button onclick="tipoTeste=10; iniciarTeste(tipoTeste);">Resistência de Força<br><span style="font-size:1rem;font-weight:400;">(10 Saltos)</span></button>
     <button id="cancelarBtn" class="hidden" onclick="cancelarTeste()">Cancelar Teste</button>
     <div id="fatorDiv">
       <label>Fator de Correção: <input id="fatorInput" type="number" step="0.01" value="1.53" style="width:70px;"> </label>
@@ -241,6 +241,5 @@ function capturarSalto(callback) {
         window.addEventListener('devicemotion', motionHandler);
       }
     }
-  </script>
-  </body>
-  </html>
+  </script></body>
+</html>
