--- a/saltopronto.html
+++ b/saltopronto.html
@@ -245,5 +245,6 @@ function capturarSalto(callback) {
         window.addEventListener('devicemotion', motionHandler);
       }
     }
-  </script></body>
+  </script>
+</body>
 </html>
