--- a/saltopronto.html
+++ b/saltopronto.html
@@ -1,227 +1,120 @@
-<!DOCTYPE html><html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
+  <title>Salto Pronto</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Medidor de Saltos</title>
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; background: #f0f4f8; color: #222; text-align: center; padding: 20px; }
-    .container { max-width: 400px; margin: 0 auto; background: #fff; border-radius: 12px; box-shadow: 0 2px 12px #0002; padding: 32px 12px; margin-top: 24px;}
-    button, .btn { font-size: 1.1rem; padding: 14px 34px; border-radius: 8px; border: none; background: #2563eb; color: #fff; margin: 16px 4px; cursor: pointer; transition: background .2s;}
-    button:disabled, .btn[disabled] { background: #8ca3d1; cursor: not-allowed;}
-    h1 { font-size: 2.1rem; margin-bottom: 16px;}
-    .hidden { display: none !important; }
-    .menu-btn { background: #64748b; color: #fff; margin: 10px 3px; padding: 8px 16px; border-radius: 8px; border: none;}
-    #fatorDiv { margin-top: 12px; font-size: 0.95rem; color: #333; }
-    #graficoContainer { width: 100%; max-width: 380px; margin: 20px auto; }
-    canvas { background: #fff; border: 1px solid #ccc; border-radius: 8px; }
+    body { font-family: Arial, sans-serif; text-align: center; margin: 20px; }
+    button { font-size: 18px; margin: 10px; padding: 10px 20px; }
+    #status { margin-top: 20px; font-size: 24px; font-weight: bold; }
+    canvas { max-width: 100%; }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Medidor de Saltos</h1>
-    <button onclick="iniciarTeste(1)">Força Explosiva<br><span style="font-size:1rem;font-weight:400;">(1 Salto)</span></button>
-    <button onclick="iniciarTeste(10)">Resistência de Força<br><span style="font-size:1rem;font-weight:400;">(10 Saltos)</span></button>
-    <button id="cancelarBtn" class="hidden" onclick="cancelarTeste()">Cancelar Teste</button>
-    <div id="fatorDiv">
-      <label>Fator de Correção: <input id="fatorInput" type="number" step="0.01" value="1.53" style="width:70px;"> </label>
-    </div>
-    <div id="status"></div>
-    <div id="resultado"></div>
-    <div id="graficoContainer">
-      <canvas id="grafico"></canvas>
-    </div>
-  </div>  <script>
-    let tipoTeste = 1;
-    let fator = parseFloat(localStorage.getItem('fatorCorrecao')) || 1.53;
-    document.getElementById("fatorInput").value = fator;
-    document.getElementById("fatorInput").oninput = function() {
-      fator = parseFloat(this.value);
-      localStorage.setItem('fatorCorrecao', fator);
-    };
+  <h1>Salto Pronto</h1>
+  <p>Escolha o tipo de teste:</p>
+  <button onclick="tipoTeste = 1; iniciarTeste(1)">Teste de 1 salto</button>
+  <button onclick="tipoTeste = 10; iniciarTeste(10)">Teste de 10 saltos</button>
+  <button onclick="cancelarTeste()">Cancelar Teste</button>
 
-    const statusDiv = document.getElementById('status');
-    const resultadoDiv = document.getElementById('resultado');
-    const cancelarBtn = document.getElementById('cancelarBtn');
-    const ctx = document.getElementById('grafico').getContext('2d');
-    const chart = new Chart(ctx, {
-      type: 'line',
-      data: { labels: [], datasets: [{ label: '', data: [], borderColor: '#2563eb', borderWidth: 2, pointRadius: 2, pointBackgroundColor: '#1d4ed8', tension: 0.3 }] },
-      options: {
-        responsive: true,
-        animation: false,
-        scales: {
-          y: {
-            beginAtZero: true,
-            min: 0,
-            max: 50,
-            ticks: { stepSize: 5 }
-          },
-          x: {
-            display: true,
-            ticks: { display: false }
-          }
-        },
-        plugins: {
-          legend: {
-            display: true,
-            labels: { font: { size: 14 }, color: '#111' }
-          },
-          tooltip: {
-            enabled: true,
-            mode: 'nearest',
-            intersect: false
-          }
-        },
-        elements: {
-          line: { borderWidth: 2 },
-          point: { radius: 2 }
-        }
-      }
-    });
+  <div id="status">Aguardando início...</div>
+  <canvas id="grafico" width="400" height="200"></canvas>
+  <p>
+    Fator de correção (%): 
+    <input type="number" id="fatorInput" value="100" onchange="atualizarFator()" style="width: 80px;">
+  </p>
+  <script>
+    let tipoTeste = 0;
+    let fator = 1;
+    let statusDiv = document.getElementById("status");
+    let ctx = document.getElementById("grafico").getContext("2d");
+    let dados = [];
+    let testeEmAndamento = false;
+    let saltos = [];
 
-    function plotar(valor) {
-      chart.data.labels.push('');
-      chart.data.datasets[0].data.push(valor);
-      if (chart.data.labels.length > 100) {
-        chart.data.labels.shift();
-        chart.data.datasets[0].data.shift();
-      }
-      chart.update();
+    function atualizarFator() {
+      let input = document.getElementById("fatorInput").value;
+      fator = parseFloat(input) / 100;
     }
-
-    function beep() {
-      const ctx = new (window.AudioContext || window.webkitAudioContext)();
-      const o = ctx.createOscillator();
-      const g = ctx.createGain();
-      o.type = "sine";
-      o.connect(g);
-      g.connect(ctx.destination);
-      o.start();
-      g.gain.exponentialRampToValueAtTime(0.00001, ctx.currentTime + 0.5);
-      o.stop(ctx.currentTime + 0.5);
-    }
-
-    let cancelado = false;
 
     function iniciarTeste(tipo) {
+      if (testeEmAndamento) return;
       tipoTeste = tipo;
-      resultadoDiv.innerHTML = '';
-      chart.data.labels = [];
-      chart.data.datasets[0].data = [];
-      chart.data.datasets[0].label = tipo === 1 ? 'Aceleração (m/s²)' : 'Altura do Salto (cm)';
-      chart.update();
-      cancelado = false;
-      cancelarBtn.classList.toggle('hidden', tipo !== 10);
-
-      if (tipo === 10) {
-        iniciarSequencia10Saltos();
-        return;
-      }
-
-      statusDiv.innerText = 'Aguardando salto...';
-      capturarSalto((altura, tempoVoo) => {
-        resultadoDiv.innerHTML = `<b>Altura estimada:</b> ${altura.toFixed(2)} cm<br><small>Tempo de voo: ${tempoVoo.toFixed(3)} s</small>`;
-      });
-    }
-
-    function cancelarTeste() {
-      cancelado = true;
-      statusDiv.innerText = 'Teste cancelado';
-      cancelarBtn.classList.add('hidden');
-    }
-
-    function iniciarSequencia10Saltos() {
-      const saltos = [];
-      let atual = 0;
-
-      function proximoSalto() {
-        if (cancelado) return;
-        if (atual >= 10) {
-          cancelarBtn.classList.add('hidden');
-          const primeiros = saltos.slice(0, 3);
-          const ultimos = saltos.slice(-3);
-          const media = arr => arr.reduce((a, b) => a + b, 0) / arr.length;
-          const media1 = media(primeiros);
-          const media2 = media(ultimos);
-          const fadigaPercentual = ((media1 - media2) / media1) * 100;
-
-          chart.data.labels = saltos.map((_, i) => `Salto ${i+1}`);
-          chart.data.datasets[0].data = [...saltos];
-          chart.update();
-
-          let interpretacao = '';
-          if (Math.abs(fadigaPercentual) <= 5) {
-            interpretacao = 'O atleta manteve o desempenho durante o teste.';
-          } else if (fadigaPercentual > 5) {
-            interpretacao = `O atleta apresentou queda de ${fadigaPercentual.toFixed(1)}% no desempenho.`;
-          } else {
-            interpretacao = `O atleta apresentou melhora de ${Math.abs(fadigaPercentual).toFixed(1)}% no desempenho.`;
-          }
-
-          resultadoDiv.innerHTML += `<hr><b>Índice de Fadiga:</b> ${fadigaPercentual.toFixed(1)}%<br><small>Média 3 primeiros: ${media1.toFixed(2)} | Últimos: ${media2.toFixed(2)}</small><br>${interpretacao}`;
-          return;
-        }
-
-        statusDiv.innerText = `Aguardando salto ${atual + 1}...`;
-        capturarSalto((altura, tempoVoo) => {
-          resultadoDiv.innerHTML += `<b>Salto ${atual + 1}:</b> ${altura.toFixed(2)} cm<br>`;
-          saltos.push(altura);
-          atual++;
-          setTimeout(() => {
-            beep();
-            proximoSalto();
-          }, 2000);
-        });
-      }
-
+      saltos = [];
+      dados = [];
+      testeEmAndamento = true;
+      statusDiv.innerText = `Iniciando teste de ${tipo} salto(s)...`;
       proximoSalto();
     }
 
-    
-function capturarSalto(callback) {
-  let saltou = false;
-  let tDecolagem = 0;
-
-  function motionHandler(e) {
-    const acc = e.accelerationIncludingGravity;
-    const now = Date.now();
-    const modulo = Math.sqrt(acc.x**2 + acc.y**2 + acc.z**2);
-
-    // Exibe gráfico para teste de 1 ou 10 saltos
-    if (tipoTeste === 1 || tipoTeste === 10) {
-      plotar(modulo);
+    function cancelarTeste() {
+      testeEmAndamento = false;
+      statusDiv.innerText = "Teste cancelado.";
+      window.removeEventListener('devicemotion', motionHandlerGlobal);
     }
 
-    if (!saltou && modulo < 3) {
-      saltou = true;
-      tDecolagem = now;
-      statusDiv.innerText = 'No ar!';
-    }
-
-    if (saltou && modulo > 10) {
-      const tPouso = now;
-      const tempoVoo = (tPouso - tDecolagem) / 1000;
-      const altura = (9.81 * tempoVoo * tempoVoo) / 8 * 100 * fator;
-      statusDiv.innerText = 'Salto registrado!';
-      window.removeEventListener('devicemotion', motionHandler);
-      if (callback) callback(altura, tempoVoo);
-    }
-  }
-
-  if (typeof DeviceMotionEvent.requestPermission === 'function') {
-    DeviceMotionEvent.requestPermission().then(permissionState => {
-      if (permissionState === 'granted') {
-        window.addEventListener('devicemotion', motionHandler);
-      } else {
-        alert('Permissão negada para acessar o acelerômetro.');
+    function proximoSalto() {
+      if (!testeEmAndamento) return;
+      if (saltos.length >= tipoTeste) {
+        finalizarTeste();
+        return;
       }
-    }).catch(console.error);
-  } else {
-    window.addEventListener('devicemotion', motionHandler);
-  }
-}
+      statusDiv.innerText = `Aguardando salto ${saltos.length + 1}...`;
+      capturarSalto((altura, tempoVoo) => {
+        saltos.push({ altura, tempoVoo });
+        proximoSalto();
+      });
+    }
 
+    function finalizarTeste() {
+      testeEmAndamento = false;
+      let alturas = saltos.map(s => s.altura);
+      let medias = calcularMedias(alturas);
+      let resultado = `Média: ${medias.media.toFixed(2)} cm`;
+      if (tipoTeste === 10) {
+        resultado += `\n3 primeiros: ${medias.mediaInicio.toFixed(2)} cm`;
+        resultado += `\n3 últimos: ${medias.mediaFim.toFixed(2)} cm`;
+        let diferenca = medias.mediaFim - medias.mediaInicio;
+        let percentual = (diferenca / medias.mediaInicio) * 100;
+        resultado += `\nDiferença: ${percentual.toFixed(1)}%`;
+        if (Math.abs(percentual) <= 5) {
+          resultado += `\nO atleta manteve o desempenho durante o teste.`;
+        } else if (percentual > 5) {
+          resultado += `\nO atleta melhorou o desempenho.`;
+        } else {
+          resultado += `\nO atleta teve queda de desempenho.`;
+        }
+      }
+      alert(resultado);
+      statusDiv.innerText = "Teste finalizado.";
+    }
+
+    function calcularMedias(arr) {
+      let media = arr.reduce((a, b) => a + b, 0) / arr.length;
+      let mediaInicio = arr.slice(0, 3).reduce((a, b) => a + b, 0) / 3;
+      let mediaFim = arr.slice(-3).reduce((a, b) => a + b, 0) / 3;
+      return { media, mediaInicio, mediaFim };
+    }
+
+    function capturarSalto(callback) {
+      let saltou = false;
+      let tDecolagem = 0;
+
+      function motionHandler(e) {
+        const acc = e.accelerationIncludingGravity;
+        const now = Date.now();
+        const modulo = Math.sqrt(acc.x ** 2 + acc.y ** 2 + acc.z ** 2);
+
+        if (tipoTeste === 1 || tipoTeste === 10) {
+          plotar(modulo);
+        }
+
+        if (!saltou && modulo < 3) {
+          saltou = true;
+          tDecolagem = now;
+          statusDiv.innerText = 'No ar!';
+        }
 
         if (saltou && modulo > 10) {
           const tPouso = now;
@@ -244,6 +137,18 @@ function capturarSalto(callback) {
       } else {
         window.addEventListener('devicemotion', motionHandler);
       }
+    }
+
+    function plotar(valor) {
+      dados.push(valor);
+      if (dados.length > 50) dados.shift();
+      ctx.clearRect(0, 0, 400, 200);
+      ctx.beginPath();
+      ctx.moveTo(0, 200 - dados[0]);
+      for (let i = 1; i < dados.length; i++) {
+        ctx.lineTo(i * (400 / 50), 200 - dados[i]);
+      }
+      ctx.stroke();
     }
   </script>
 </body>
