--- a/saltopronto.html
+++ b/saltopronto.html
@@ -20,8 +20,8 @@
 <body>
   <div class="container">
     <h1>Medidor de Saltos</h1>
-    <button onclick="iniciarTeste(1)">Força Explosiva<br><span style="font-size:1rem;font-weight:400;">(1 Salto)</span></button>
-    <button onclick="iniciarTeste(10)">Resistência de Força<br><span style="font-size:1rem;font-weight:400;">(10 Saltos)</span></button>
+    <button onclick="tipoTeste=1; iniciarTeste(1)">Força Explosiva<br><span style="font-size:1rem;font-weight:400;">(1 Salto)</span></button>
+    <button onclick="tipoTeste=10; iniciarTeste(10)">Resistência de Força<br><span style="font-size:1rem;font-weight:400;">(10 Saltos)</span></button>
     <button id="cancelarBtn" class="hidden" onclick="cancelarTeste()">Cancelar Teste</button>
     <div id="fatorDiv">
       <label>Fator de Correção: <input id="fatorInput" type="number" step="0.01" value="1.53" style="width:70px;"> </label>
@@ -187,7 +187,7 @@
         const now = Date.now();
         const modulo = Math.sqrt(acc.x**2 + acc.y**2 + acc.z**2);
 
-        if (tipoTeste === 1 || tipoTeste === 10) plotar(modulo);
+        if (tipoTeste === 1) plotar(modulo);
 
         if (!saltou && modulo < 3) {
           saltou = true;
@@ -204,9 +204,6 @@
           if (callback) callback(altura, tempoVoo);
         }
       }
-          if (callback) callback(altura, tempoVoo);
-        }
-      }
 
       if (typeof DeviceMotionEvent.requestPermission === 'function') {
         DeviceMotionEvent.requestPermission().then(permissionState => {
@@ -220,5 +217,6 @@
         window.addEventListener('devicemotion', motionHandler);
       }
     }
-  </script></body>
+  </script>
+</body>
 </html>
