--- a/ColetaIntegrado.html
+++ b/ColetaIntegrado.html
@@ -105,6 +105,7 @@
           <label>Posição</label>
           <select id="posicao" required="">
             <option value="">Selecione</option>
+            <option>Nenhuma</option>
             <option>Goleiro</option>
             <option>Defesa</option>
             <option>Meio-campo</option>
